[package]
name = "rustrix"
version = "0.1.0"
edition = "2021"
description = "A cinematic Matrix-style terminal rain"
license = "MIT"
readme = "README.md"
repository = "https://github.com/deatherving/rustrix"
keywords = ["matrix", "terminal", "rain", "cli", "animation"]
categories = ["command-line-utilities"]

[[bin]]
name = "rustrix"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
rand = "0.8"
