[package]
name = "tmatrix"
version = "0.1.0"
edition = "2021"
description = "Cinematic Matrix digital rain in your terminal — green cascades, zero dependencies on your sanity"
license = "MIT"
readme = "README.md"
repository = "https://github.com/deatherving/tmatrix"
keywords = ["matrix", "terminal", "rain", "cli", "animation"]
categories = ["command-line-utilities"]

[[bin]]
name = "tmatrix"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
rand = "0.8"
